[package]
name = "prezi-puppet"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
headless_chrome = "1"
log = "0.4"
printpdf = { version = "0.5", features = ["embedded_images"] }
simplelog = "0.12"
tempfile = "3"
